fixed horizontal alignment of sidebars and center pages

--- a/client/client/public/scss/dashboard.scss
+++ b/client/client/public/scss/dashboard.scss
@@ -68,13 +68,20 @@ hr {
     margin-left: $margin-left
 }
 
+.col-md-6,
+.col-md-3 {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
 .admin-sidebar {
     text-align: center;
     border: 0;
     padding: 10px 0px 0px 0px;
     background-color: #B3B3B3;
     height: 100%;
-    max-width: 300px;
+    width: 100%;
     margin: 0;
     &>.btn {
         width: 200px;
